# AM-QADF

./: .dockerignore  .flake8  .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
demo/: 01_Data_Query_and_Access.ipynb  23_Data_Generation_Workbench.ipynb  STL_Hatching_Visualization.ipynb  STL_Plotting_Demo.ipynb
docker/: .dockerignore  Dockerfile.spark  docker-compose.dev.yml  docker-compose.prod.yml
docs/: AM_QADF_Workflow_Overview.md
examples/: README.md  __init__.py  analytics_example.py  (+7 more)
src/am_qadf_native/: CMakeLists.txt  README.md
src/am_qadf_native/include/am_qadf_native/bridge/: numpy_openvdb_bridge.hpp
src/am_qadf_native/include/am_qadf_native/correction/: calibration.hpp  geometric_correction.hpp  signal_noise_reduction.hpp  spatial_noise_filtering.hpp  validation.hpp
src/am_qadf_native/include/am_qadf_native/fusion/: fusion_quality.hpp  fusion_strategies.hpp  grid_fusion.hpp
src/am_qadf_native/include/am_qadf_native/io/: mongocxx_instance.hpp  mongodb_writer.hpp  openvdb_reader.hpp  paraview_exporter.hpp  save_processed_points_bridge.hpp  vdb_writer.hpp
src/am_qadf_native/include/am_qadf_native/processing/: signal_generation.hpp  signal_processing.hpp
src/am_qadf_native/include/am_qadf_native/query/: ct_image_reader.hpp  ct_scan_query.hpp  laser_monitoring_query.hpp  mongodb_query_client.hpp  point_converter.hpp  query_result.hpp
src/am_qadf_native/include/am_qadf_native/signal_mapping/: idw_interpolation.hpp  interpolation_base.hpp  kde_interpolation.hpp  linear_interpolation.hpp  nearest_neighbor.hpp  rbf_interpolation.hpp
src/am_qadf_native/include/am_qadf_native/synchronization/: grid_spatial_alignment.hpp  grid_synchronizer.hpp  grid_temporal_alignment.hpp  hatching_sampling.hpp  point_bounds.hpp  point_coordinate_transform.hpp  point_temporal_alignment.hpp  point_transform.hpp  point_transformation_estimate.hpp  point_transformation_sampling.hpp  point_transformation_validate.hpp
src/am_qadf_native/include/am_qadf_native/visualization/: hatching_visualization_data.hpp  point_cloud_visualization_data.hpp
src/am_qadf_native/include/am_qadf_native/voxelization/: grid_factory.hpp  hatching_voxelizer.hpp  openvdb_grid.hpp  stl_voxelizer.hpp  unified_grid_factory.hpp
src/am_qadf_native/python/: module.cpp
src/am_qadf_native/python/bindings/: correction_bindings.cpp  fusion_bindings.cpp  io_bindings.cpp  processing_bindings.cpp  query_bindings.cpp  signal_mapping_bindings.cpp  synchronization_bindings.cpp  visualization_bindings.cpp  voxelization_bindings.cpp
src/am_qadf_native/src/bridge/: numpy_openvdb_bridge.cpp
src/am_qadf_native/src/correction/: calibration.cpp  geometric_correction.cpp  signal_noise_reduction.cpp  spatial_noise_filtering.cpp  validation.cpp
src/am_qadf_native/src/fusion/: fusion_quality.cpp  fusion_strategies.cpp  grid_fusion.cpp
src/am_qadf_native/src/io/: mongocxx_instance.cpp  mongodb_writer.cpp  openvdb_reader.cpp  paraview_exporter.cpp  save_processed_points_bridge.cpp  vdb_writer.cpp
src/am_qadf_native/src/processing/: signal_generation.cpp  signal_processing.cpp
src/am_qadf_native/src/query/: ct_image_reader.cpp  ct_scan_query.cpp  laser_monitoring_query.cpp  mongodb_query_client.cpp  point_converter.cpp
src/am_qadf_native/src/signal_mapping/: idw_interpolation.cpp  interpolation_base.cpp  kde_interpolation.cpp  linear_interpolation.cpp  nearest_neighbor.cpp  rbf_interpolation.cpp
src/am_qadf_native/src/synchronization/: grid_spatial_alignment.cpp  grid_synchronizer.cpp  grid_temporal_alignment.cpp  point_bounds.cpp  point_coordinate_transform.cpp  point_temporal_alignment.cpp  point_transform.cpp  point_transformation_estimate.cpp  point_transformation_sampling.cpp  point_transformation_validate.cpp
src/am_qadf_native/src/visualization/: hatching_visualization_data.cpp  point_cloud_visualization_data.cpp
src/am_qadf_native/src/voxelization/: hatching_voxelizer.cpp  openvdb_grid.cpp  stl_voxelizer.cpp  unified_grid_factory.cpp
tests/integration/cpp/: CMakeLists.txt  README.md  test_correction_pipeline.cpp  test_fusion_pipeline.cpp  test_grid_operations.cpp  test_openvdb_integration.cpp  test_processing_pipeline.cpp  test_signal_mapping_pipeline.cpp  test_synchronization_pipeline.cpp
tests/performance/cpp/: CMakeLists.txt  README.md  benchmark_fusion.cpp  benchmark_query.cpp  benchmark_signal_mapping.cpp  benchmark_synchronization.cpp  benchmark_voxelization.cpp
tests/unit/cpp/: CMakeLists.txt  README.md
tests/unit/cpp/correction/: CMakeLists.txt  test_calibration.cpp  test_geometric_correction.cpp  test_signal_noise_reduction.cpp  test_spatial_noise_filtering.cpp  test_validation.cpp
tests/unit/cpp/fusion/: CMakeLists.txt  test_fusion_quality.cpp  test_fusion_strategies.cpp  test_grid_fusion.cpp
tests/unit/cpp/io/: CMakeLists.txt  test_mongodb_writer.cpp  test_openvdb_reader.cpp  test_paraview_exporter.cpp  test_vdb_writer.cpp
tests/unit/cpp/processing/: CMakeLists.txt  test_signal_generation.cpp  test_signal_processing.cpp
tests/unit/cpp/query/: CMakeLists.txt  test_ct_image_reader.cpp  test_ct_scan_query.cpp  test_laser_monitoring_query.cpp  test_mongodb_query_client.cpp  test_point_converter.cpp  test_query_result.cpp
tests/unit/cpp/signal_mapping/: CMakeLists.txt  test_idw_interpolation.cpp  test_interpolation_base.cpp  test_kde_interpolation.cpp  test_linear_interpolation.cpp  test_nearest_neighbor.cpp  test_rbf_interpolation.cpp
tests/unit/cpp/synchronization/: CMakeLists.txt  test_grid_spatial_alignment.cpp  test_grid_synchronizer.cpp  test_grid_temporal_alignment.cpp  test_hatching_sampling.cpp  test_point_bounds.cpp  test_point_coordinate_transform.cpp  test_point_temporal_alignment.cpp  test_point_transform.cpp  test_point_transformation_estimate.cpp  test_point_transformation_sampling.cpp  test_point_transformation_validate.cpp
tests/unit/cpp/voxelization/: CMakeLists.txt  test_grid_factory.cpp  test_hatching_voxelizer.cpp  test_openvdb_grid.cpp  test_stl_voxelizer.cpp  test_unified_grid_factory.cpp
(+960 files in other folders)
