[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "pybind11>=2.10", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "am-qadf"
version = "0.1.0"
description = "AM-QADF: Additive Manufacturing Quality Assessment and Data Fusion Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AM-QADF Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pymongo>=4.0.0",
    "redis>=4.0.0",
    "pyvista>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/your-org/AM-QADF"
Documentation = "https://am-qadf.readthedocs.io"
Repository = "https://github.com/your-org/AM-QADF"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["am_qadf"]

[tool.setuptools.package-data]
am_qadf = ["py.typed"]
